Option 1 - move page update nav to bottom

--- a/app/views/option1a.html
+++ b/app/views/option1a.html
@@ -148,48 +148,13 @@
 						</ol>
 					</nav>
 				</nav>
-				<div class="travel-advice-notice">
-					<div class="travel-advice-notice__header">
-
-						<div id="warning-text-577ee2bf" class="gem-c-warning-text govuk-warning-text">
-							<h2 class="govuk-warning-text__text gem-c-warning-text__text--large">
-								NEW - Emergency travel alerts
-
-							</h2>
-						</div>
-					</div>
-					<div class="travel-advice-notice__content">
-						<div class="gem-c-govspeak govuk-govspeak direction-ltr" data-module="govspeak">
-							<!--						<p>-->
-							<!--							<a href="https://fcdo-sms-subscriber.herokuapp.com/alert-history?country=Myanmar&sort=desc">See all alerts</a> for this incident.-->
-							<!--						</p>-->
-							<p>If an emergency situation occurs in Myanmar that threatens the safety of British Nationals or may significantly disrupts travel plans, for example a terrorist attack or natural disaster, we can send you updates as it develops, including advice on what to do.
-							</p>
-							<p>
-								<a href="/add_country?countryToAdd=Myanmar&emergency=true">Sign up to receive alerts and the latest information</a> by email and SMS.
-							</p>
-						</div>
-					</div>
-				</div>
-				<section class="gem-c-subscription-links ">
-					<h2 class="gem-c-subscription-links__hidden-header visuallyhidden">Subscriptions</h2>
-					<ul class="gem-c-subscription-links__list">
-						<li class="gem-c-subscription-links__list-item">
-							<a class="gem-c-subscription-links__item  gem-c-subscription-links__item--link" href="/foreign-travel-advice/myanmar/email-signup">           <svg xmlns="http://www.w3.org/2000/svg" width="21" height="15.75" class="gem-c-subscription-links__icon" focusable="false" fill="currentColor" aria-hidden="true"><path d="M19.687 0H1.312C.589 0 0 .587 0 1.313v13.124c0 .726.588 1.313 1.313 1.313h18.374c.725 0 1.313-.587 1.313-1.313V1.313C21 .587 20.412 0 19.687 0zm-2.625 2.625L10.5 7.875l-6.563-5.25h13.126zm1.313 10.5H2.625V3.937L10.5 10.5l7.875-6.563v9.188z"></path></svg>
-								Get email alerts
-							</a>
-						</li>
-
-						<li class="gem-c-subscription-links__list-item">
-
-							<a class="gem-c-subscription-links__item  gem-c-subscription-links__item--link" href="/foreign-travel-advice/myanmar.atom">            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="gem-c-subscription-links__icon" focusable="false" fill="currentColor" aria-hidden="true"><path d="M1.996 11A2 2 0 0 0 0 12.993c0 1.101.895 1.99 1.996 1.99 1.106 0 2-.889 2-1.99a2 2 0 0 0-2-1.993zM.002 5.097V7.97c1.872 0 3.632.733 4.958 2.059A6.984 6.984 0 0 1 7.015 15h2.888c0-5.461-4.443-9.903-9.9-9.903zM.006 0v2.876c6.676 0 12.11 5.44 12.11 12.124H15C15 6.731 8.273 0 .006 0z"></path></svg>
-								Subscribe to feed
-							</a>
-						</li>
-					</ul>
-
-				</section>
 			</aside>
+		</div>
+	</div>
+
+	<div class="govuk-grid-row">
+		<div class="govuk-grid-column-two-thirds">
+
 			<h1 class="part-title">
 				Summary
 			</h1>
@@ -213,15 +178,32 @@
 				</dl>
 			</div>
 			<div class="gem-c-govspeak govuk-govspeak direction-ltr" data-module="govspeak">
+				<div class="travel-advice-notice">
+					<div class="travel-advice-notice__header">
+
+						<div id="warning-text-577ee2bf" class="gem-c-warning-text govuk-warning-text">
+							<h2 class="govuk-warning-text__text gem-c-warning-text__text--large">
+								NEW - Emergency travel alerts
+
+							</h2>
+						</div>
+					</div>
+					<div class="travel-advice-notice__content">
+						<div class="gem-c-govspeak govuk-govspeak direction-ltr" data-module="govspeak">
+							<!--						<p>-->
+							<!--							<a href="https://fcdo-sms-subscriber.herokuapp.com/alert-history?country=Myanmar&sort=desc">See all alerts</a> for this incident.-->
+							<!--						</p>-->
+							<p>If an emergency situation occurs in Myanmar that threatens the safety of British Nationals or may significantly disrupts travel plans, for example a terrorist attack or natural disaster, we can send you updates as it develops, including advice on what to do.
+							</p>
+							<p>
+								<a href="/add_country?countryToAdd=Myanmar&emergency=true">Sign up to receive alerts and the latest information</a> by email and SMS.
+							</p>
+						</div>
+					</div>
+				</div>
 				<p>
 					<strong>The Foreign, Commonwealth & Development Office (FCDO) advises against all but essential travel across Myanmar, based on recent political events and the current assessment of the COVID-19 risk.</strong> If you have concerns for your safety in the current situation, you should consider leaving Myanmar by commercial means. <a href="https://www.gov.uk/foreign-travel-advice/myanmar/return-to-the-uk">See Return to UK</a>.</p>
 			</div>
-		</div>
-	</div>
-
-	<div class="govuk-grid-row">
-		<div class="govuk-grid-column-two-thirds">
-
 			<div class="gem-c-govspeak govuk-govspeak direction-ltr" data-module="govspeak">
 				<p>As of 1 February, the Myanmar Military have declared a state of emergency and assumed control. There are reports that figures in the Civilian Government, civil society and a foreign national have been detained by the military. The British Embassy is following the situation carefully and will continue to update the Travel Advice. The military has shut down access to various internet platforms and reports of disruptions to wider internet, phone networks and ATMs are widespread.  You are advised to stay home and stay safe. If you need to collect essential provisions, you should do so quickly and avoiding crowds. There is a nationwide curfew imposed between 8pm and 4am until further notice.</p>
 				<p>If you’re in Myanmar and you need urgent help, use one of the following numbers:</p>
@@ -290,8 +272,26 @@
 
 				<p>The <a href="https://www.gov.uk/government/publications/overseas-business-risk-burma">Overseas Business Risk service</a> offers information and advice for British companies operating overseas on how to manage political, economic, and business security-related risks.</p>
 
+<br />
+				<p><strong>Get notified when this content changes</strong></p>
+				<section class="gem-c-subscription-links ">
+					<h2 class="gem-c-subscription-links__hidden-header visuallyhidden">Subscriptions</h2>
+					<ul class="gem-c-subscription-links__list">
+						<li class="gem-c-subscription-links__list-item">
+							<a class="gem-c-subscription-links__item  gem-c-subscription-links__item--link" href="/foreign-travel-advice/myanmar/email-signup">           <svg xmlns="http://www.w3.org/2000/svg" width="21" height="15.75" class="gem-c-subscription-links__icon" focusable="false" fill="currentColor" aria-hidden="true"><path d="M19.687 0H1.312C.589 0 0 .587 0 1.313v13.124c0 .726.588 1.313 1.313 1.313h18.374c.725 0 1.313-.587 1.313-1.313V1.313C21 .587 20.412 0 19.687 0zm-2.625 2.625L10.5 7.875l-6.563-5.25h13.126zm1.313 10.5H2.625V3.937L10.5 10.5l7.875-6.563v9.188z"></path></svg>
+								Email
+							</a>
+						</li>
 
+						<li class="gem-c-subscription-links__list-item" style="margin-left: 20px">
 
+							<a class="gem-c-subscription-links__item  gem-c-subscription-links__item--link" href="/foreign-travel-advice/myanmar.atom">            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="gem-c-subscription-links__icon" focusable="false" fill="currentColor" aria-hidden="true"><path d="M1.996 11A2 2 0 0 0 0 12.993c0 1.101.895 1.99 1.996 1.99 1.106 0 2-.889 2-1.99a2 2 0 0 0-2-1.993zM.002 5.097V7.97c1.872 0 3.632.733 4.958 2.059A6.984 6.984 0 0 1 7.015 15h2.888c0-5.461-4.443-9.903-9.9-9.903zM.006 0v2.876c6.676 0 12.11 5.44 12.11 12.124H15C15 6.731 8.273 0 .006 0z"></path></svg>
+								Feed
+							</a>
+						</li>
+					</ul>
+
+				</section>
 			</div>
 
 			<nav class="gem-c-pagination" role="navigation" aria-label="Pagination">
