Kenya options / adjust subscribe flow to deal with different countries

--- a/app/views/emergency-alerts/choose-channels.html
+++ b/app/views/emergency-alerts/choose-channels.html
@@ -13,6 +13,7 @@ How would you like to receive emergency alerts? - gov.uk
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-three-quarters">
 		<form class="form" method="post" action="end-date-for-alerts">
+			<input type="hidden" name="typeofalert" value="Emergency alerts">
 			<fieldset class="govuk-fieldset">
 				<legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
 					<h1 class="govuk-heading-xl">How would you like to receive emergency alerts?
