--- a/app/views/kenya-option1b.html
+++ b/app/views/kenya-option1b.html
@@ -145,7 +145,24 @@
 							</li>
 						</ol>
 					</nav>
-				</nav>
+				</nav>	<section class="gem-c-subscription-links ">
+				<h2 class="gem-c-subscription-links__hidden-header visuallyhidden">Subscriptions</h2>
+				<ul class="gem-c-subscription-links__list">
+					<li class="gem-c-subscription-links__list-item">
+						<a class="gem-c-subscription-links__item  gem-c-subscription-links__item--link" href="/foreign-travel-advice/myanmar/email-signup">           <svg xmlns="http://www.w3.org/2000/svg" width="21" height="15.75" class="gem-c-subscription-links__icon" focusable="false" fill="currentColor" aria-hidden="true"><path d="M19.687 0H1.312C.589 0 0 .587 0 1.313v13.124c0 .726.588 1.313 1.313 1.313h18.374c.725 0 1.313-.587 1.313-1.313V1.313C21 .587 20.412 0 19.687 0zm-2.625 2.625L10.5 7.875l-6.563-5.25h13.126zm1.313 10.5H2.625V3.937L10.5 10.5l7.875-6.563v9.188z"></path></svg>
+							Get email alerts
+						</a>
+					</li>
+
+					<li class="gem-c-subscription-links__list-item">
+
+						<a class="gem-c-subscription-links__item  gem-c-subscription-links__item--link" href="/foreign-travel-advice/myanmar.atom">            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="gem-c-subscription-links__icon" focusable="false" fill="currentColor" aria-hidden="true"><path d="M1.996 11A2 2 0 0 0 0 12.993c0 1.101.895 1.99 1.996 1.99 1.106 0 2-.889 2-1.99a2 2 0 0 0-2-1.993zM.002 5.097V7.97c1.872 0 3.632.733 4.958 2.059A6.984 6.984 0 0 1 7.015 15h2.888c0-5.461-4.443-9.903-9.9-9.903zM.006 0v2.876c6.676 0 12.11 5.44 12.11 12.124H15C15 6.731 8.273 0 .006 0z"></path></svg>
+							Subscribe to feed
+						</a>
+					</li>
+				</ul>
+
+			</section>
 			</aside>
 		</div>
 	</div>
@@ -180,16 +197,6 @@
 
 
 			<div class="gem-c-govspeak govuk-govspeak direction-ltr" data-module="govspeak">
-				<p><strong>The Foreign, Commonwealth &amp; Development Office (<abbr title="Foreign, Commonwealth &amp; Development Office">FCDO</abbr>) advises against all but essential travel to:</strong></p>
-
-				<ul>
-					<li>areas within 60km of the Kenya-Somali border</li>
-					<li>Garissa County</li>
-					<li>Lamu County (excluding Lamu Island and Manda Island)</li>
-					<li>areas of Tana River County north of the Tana river itself</li>
-					<li>within 15km of the coast from the Tana river down to the Galana (Athi-Galana-Sabaki) river</li>
-					<li>the remainder of Kenya based on the current assessment of COVID-19 risks</li>
-				</ul>
 				<div class="travel-advice-notice">
 					<div class="travel-advice-notice__header">
 
@@ -212,6 +219,16 @@
 						</div>
 					</div>
 				</div>
+				<p><strong>The Foreign, Commonwealth &amp; Development Office (<abbr title="Foreign, Commonwealth &amp; Development Office">FCDO</abbr>) advises against all but essential travel to:</strong></p>
+
+				<ul>
+					<li>areas within 60km of the Kenya-Somali border</li>
+					<li>Garissa County</li>
+					<li>Lamu County (excluding Lamu Island and Manda Island)</li>
+					<li>areas of Tana River County north of the Tana river itself</li>
+					<li>within 15km of the coast from the Tana river down to the Galana (Athi-Galana-Sabaki) river</li>
+					<li>the remainder of Kenya based on the current assessment of COVID-19 risks</li>
+				</ul>
 				<div class="call-to-action">
 					<div role="note" aria-label="Warning" class="application-notice help-notice">
 						<p>Travel is subject to entry restrictions</p>
