--- a/app/views/includes/alert-subscribe-box.html
+++ b/app/views/includes/alert-subscribe-box.html
@@ -1,12 +1,10 @@
-
 <div class="travel-advice-notice">
 	<div class="travel-advice-notice__header">
 
 		<div id="warning-text-577ee2bf" class="gem-c-warning-text govuk-warning-text">
-			<span class="govuk-warning-text__icon" aria-hidden="true">!</span>
 			<h2 class="govuk-warning-text__text gem-c-warning-text__text--large">
-				<span class="govuk-warning-text__assistive">Important</span>
-				There is an ongoing situation in Myanmar after the military coup on 1st Feb 2021
+				NEW - Emergency travel alerts
+
 			</h2>
 		</div>
 	</div>
@@ -15,8 +13,10 @@
 			<!--						<p>-->
 			<!--							<a href="https://fcdo-sms-subscriber.herokuapp.com/alert-history?country=Myanmar&sort=desc">See all alerts</a> for this incident.-->
 			<!--						</p>-->
+			<p>If an emergency situation occurs in Kenya that threatens the safety of British Nationals or may significantly disrupts travel plans, for example a terrorist attack or natural disaster, we can send you updates as it develops, including advice on what to do.
+			</p>
 			<p>
-				<a href="/add_country?countryToAdd=Myanmar&emergency=true">Sign up to receive alerts and the latest information</a> by email and SMS.
+				<a href="/add_country?countryToAdd=Kenya&emergency=true">Sign up to receive alerts and the latest information</a> by email and SMS.
 			</p>
 		</div>
 	</div>
