Update emergency alert box text

--- a/app/views/includes/alert-subscribe-box.html
+++ b/app/views/includes/alert-subscribe-box.html
@@ -4,7 +4,6 @@
 		<div id="warning-text-577ee2bf" class="gem-c-warning-text govuk-warning-text">
 			<h2 class="govuk-warning-text__text gem-c-warning-text__text--large">
 				NEW - Emergency travel alerts
-
 			</h2>
 		</div>
 	</div>
@@ -13,10 +12,10 @@
 			<!--						<p>-->
 			<!--							<a href="https://fcdo-sms-subscriber.herokuapp.com/alert-history?country=Myanmar&sort=desc">See all alerts</a> for this incident.-->
 			<!--						</p>-->
-			<p>If an emergency situation occurs in Kenya that threatens the safety of British Nationals or may significantly disrupts travel plans, for example a terrorist attack or natural disaster, we can send you updates as it develops, including advice on what to do.
+			<p>If an emergency incident occurs in Myanmar, for example a terrorist attack or natural disaster, we will we will send you alerts via email or SMS. Alerts will include the latest developments and advice on what to do.
 			</p>
 			<p>
-				<a href="/add_country?countryToAdd=Kenya&emergency=true">Sign up to receive alerts and the latest information</a> by email and SMS.
+				<a href="/add_country?countryToAdd=Kenya&emergency=true">Sign up to get emergency alerts by email and SMS.</a>
 			</p>
 		</div>
 	</div>
