--- a/app/views/option4a.html
+++ b/app/views/option4a.html
@@ -155,17 +155,18 @@
 						<div id="warning-text-577ee2bf" class="gem-c-warning-text govuk-warning-text">
 
 							<h2 class="govuk-warning-text__text gem-c-warning-text__text--large">
-								NEW - Travel advice & emergency alerts
+								NEW -  Travel advice updates and emergency alerts
 							</h2>
 						</div>
 					</div>
 					<div class="travel-advice-notice__content">
-						<p class="govuk-body"><strong>Travel advice</strong> - whenever advice changes for Myanmar, we can email you with an update.
+						<p class="govuk-body"><strong>Travel advice updates</strong> -  when we change our general travel advice for Myanmar, we will email you with an update.
 						</p>
-						<p class="govuk-body"><strong>Emergency alerts</strong> - if an emergency occurs in Myanmar, for example a terrorist attack or natural disaster, we can send you updates and advice as it develops, by email and SMS.
+						<p class="govuk-body"><strong>Emergency alerts</strong> - if an emergency incident occurs in Myanmar, for example a terrorist attack or natural disaster, we will send you alerts via email or SMS. Alerts will include the latest developments and advice on what to do.
 						</p>
+						<p class="govuk-body">You can sign up for both if you wish.</p>
 						<p class="govuk-body">
-							<a href="/add_country?countryToAdd=Myanmar">Sign up to travel advice or emergency alerts</a>.
+							<a href="/add_country?countryToAdd=Myanmar">Sign up to travel advice updates and emergency alerts.</a>.
 						</p>
 					</div>
 				</div>
@@ -271,7 +272,7 @@
 				<p>If you’re resident in Myanmar or planning to stay for a longer period, you can find advice on our <a href="https://www.gov.uk/guidance/living-in-burma">Living in Myanmar guide</a>.</p>
 
 				<p>The <a href="https://www.gov.uk/government/publications/overseas-business-risk-burma">Overseas Business Risk service</a> offers information and advice for British companies operating overseas on how to manage political, economic, and business security-related risks.</p>
-				
+
 			</div>
 
 			<nav class="gem-c-pagination" role="navigation" aria-label="Pagination">
