Update options with new copy, delete old pages

--- a/app/views/includes/alert-subscribe-box.html
+++ b/app/views/includes/alert-subscribe-box.html
@@ -12,7 +12,7 @@
 			<!--						<p>-->
 			<!--							<a href="https://fcdo-sms-subscriber.herokuapp.com/alert-history?country=Myanmar&sort=desc">See all alerts</a> for this incident.-->
 			<!--						</p>-->
-			<p>If an emergency incident occurs in Myanmar, for example a terrorist attack or natural disaster, we will we will send you alerts via email or SMS. Alerts will include the latest developments and advice on what to do.
+			<p>If an emergency incident occurs in Kenya, for example a terrorist attack or natural disaster, we will we will send you alerts via email or SMS. Alerts will include the latest developments and advice on what to do.
 			</p>
 			<p>
 				<a href="/add_country?countryToAdd=Kenya&emergency=true">Sign up to get emergency alerts by email and SMS.</a>
