--- a/app/views/kenya-option1a.html
+++ b/app/views/kenya-option1a.html
@@ -150,7 +150,7 @@
 				<ul class="gem-c-subscription-links__list">
 					<li class="gem-c-subscription-links__list-item">
 						<a class="gem-c-subscription-links__item  gem-c-subscription-links__item--link" href="/foreign-travel-advice/myanmar/email-signup">           <svg xmlns="http://www.w3.org/2000/svg" width="21" height="15.75" class="gem-c-subscription-links__icon" focusable="false" fill="currentColor" aria-hidden="true"><path d="M19.687 0H1.312C.589 0 0 .587 0 1.313v13.124c0 .726.588 1.313 1.313 1.313h18.374c.725 0 1.313-.587 1.313-1.313V1.313C21 .587 20.412 0 19.687 0zm-2.625 2.625L10.5 7.875l-6.563-5.25h13.126zm1.313 10.5H2.625V3.937L10.5 10.5l7.875-6.563v9.188z"></path></svg>
-							Get email alerts
+							Get general travel advice updates
 						</a>
 					</li>
 
