--- a/app/views/email-verified.html
+++ b/app/views/email-verified.html
@@ -11,13 +11,13 @@
 
         <h1 class="govuk-panel__title">Thanks for confirming your email address</h1>
 
-		<p>You're now subscribed by email to travel updates for {{data['countryList']}}.</p>
+		<p>You're now subscribed by email to travel advice updates {%if data['typeofalert'].includes('Emergency alerts')%}and emergency alerts {% endif %}for {{data['countryList']}}.</p>
 
-		<p>The emails will be sent to {{data['email']}}</p>
+		<p>Travel advice updates will be emailed to {{data['email']}}</p>
 
 		{%if data['typeofalert'].includes('Emergency alerts')%}
-		<h2 class="govuk-heading-m">What happens next</h2>
-		<p>When the FCDO is made aware of an emergency in a country you have subscribed to, you will receive an alert by email.</p>
+		<h2 class="govuk-heading-m">Emergency alerts</h2>
+		<p>When the UK Government is made aware of an emergency in a country you have subscribed to, you will receive an alert by email.</p>
 		<p>You can also access up-to-date travel advice for each country at <a href="https://www.gov.uk/foreign-travel-advice">https://www.gov.uk/foreign-travel-advice</a></p>
 			{% endif %}
     </div>
