--- a/app/views/types-of-alert.html
+++ b/app/views/types-of-alert.html
@@ -41,7 +41,7 @@ Which types of update do you want to receive? - gov.uk
 						  Emergency or incident in {{data['countries'].join(', ')}}
 					  </label>
 					  <div id="emergency-hint" class="govuk-hint govuk-checkboxes__hint">
-						  If an emergency occurs we can send you updates as it develops, including advice on what to do. You can receive these via email, SMS and WhatsApp.
+						  If an emergency occurs we can send you updates as it develops, including advice on what to do. You can receive these via email and SMS.
 					  </div>
 				  </div>
 			  </div>
