--- a/app/views/country.html
+++ b/app/views/country.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block pageTitle %}
-Which countries or territories do you want to receive travel updates for? - gov.uk
+Which countries or territories do you want to receive updates for? - gov.uk
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@ Which countries or territories do you want to receive travel updates for? - gov.
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column">
 		<h1 class="govuk-heading-xl">
-			Which countries or territories do you want to receive travel updates for?
+			Which countries or territories do you want to receive updates for?
 		</h1>
 		{% if data['countries'] and data['countries'].length %}
 		<form id="countryList" class="form" method="post" action="types-of-alert">
@@ -50,7 +50,7 @@ Which countries or territories do you want to receive travel updates for? - gov.
 							Choose a country
 							{% endif %}</h2>
 						<label class="govuk-label" for="countryToAdd">
-							If you wish to receive travel updates for another country, select a country from the list below. Once selected, press Add to list.
+							If you wish to receive updates for another country, select a country from the list below. Once selected, press Add to list.
 						</label>
 						<select class="govuk-select" id="countryToAdd" name="countryToAdd">
 							<option value="">Select a country</option>
