.env-example / readme / better start page title

--- a/app/views/intro.html
+++ b/app/views/intro.html
@@ -15,10 +15,10 @@ Subscribe to travel updates for Myanmar - gov.uk
     <div class="govuk-grid-column">
 
       <h1 class="govuk-heading-xl">
-		  Subscribe to travel updates{% if data['countries'] and data['countries'].length %} for {{data['countries'].join(', ')}}{% endif %}
+		  Subscribe to travel advice updates and emergency alerts{% if data['countries'] and data['countries'].length %} for {{data['countries'].join(', ')}}{% endif %}
       </h1>
 
-		<p>Use this free service to subscribe to travel updates so that you are alerted to any new updates regarding:</p>
+		<p>Use this free service to subscribe to travel advice updates and emergency alerts so that you are alerted to any new updates regarding:</p>
 
 
 		<ul class="govuk-list govuk-list--bullet">
